# auditd-rs

./: Cargo.toml  README.md  audit-config.yaml
ebpf/: .Makefile.swn  .Makefile.swo  .Makefile.swp  Makefile  Makefile_old  auditrust.bpf.c  trace.c
src/: main.rs
src/cli/: mod.rs
src/config/: mod.rs
src/ebpf/: mod.rs
src/logging/: mod.rs
src/reporting/: mod.rs
